# professional-cpp

./: .gitignore  shell.nix
Ch-1/: CMakeLists.txt  employee.cpp  main.cpp
Ch-1/01_HelloWorld/: CMakeLists.txt
Ch-1/02_Namespaces/: main.cpp
Ch-1/03_Variables/: CMakeLists.txt
Ch-1/05_Enumerations/: main.cpp
Ch-1/07_ConditionalStatementsAndOperator/: 03_ConditionalOperator.cpp  CMakeLists.txt
Ch-1/08_SpaceshipOperator/: 01_SpaceshipOperator.cpp  02_NamedComparisonFunctions.cpp
Ch-1/09_Functions/: functions.cpp
Ch-1/10_Attributes/: 01_nodiscard.cpp
Ch-1/11_array/: 01_c_array.cpp
Ch-1/12_std_vector/: CMakeLists.txt  vector.cpp
Ch-1/13_std_pair/: CMakeLists.txt
Ch-1/14_optional/: CMakeLists.txt
Ch-1/16_Loops/: loops.cpp
Ch-1/17_InitializerLists/: CMakeLists.txt  InitializerLists.cpp
Ch-1/18_StringTest/: string.cpp
Ch-1/19_AirlineTicket/: AirlineTicket.cpp
Ch-1/20_Scope/: Scope.cpp
Ch-1/21_UniformInitialization/: CMakeLists.txt
Ch-1/22_Pointers/: 03_NullPointerConstant.cpp  CMakeLists.txt
Ch-1/23_const/: CMakeLists.txt
Ch-1/24_ConstPointerParam/: ConstPointerParam.cpp
Ch-1/25_ConstAirlineTicket/: CMakeLists.txt
Ch-1/26_constexpr/: 02_constexprClasses.cpp  CMakeLists.txt
Ch-1/28_References/: 01_ReferenceVariables.cpp  05_OddsEvensPtrs.cpp  06_OddsEvensRefs.cpp  07_OddsEvensVector.cpp  08_OddsEvensReturn.cpp  CMakeLists.txt
Ch-1/29_const_cast/: const_cast.cpp
Ch-1/30_Exceptions/: Exceptions.cpp
Ch-1/31_TypeAliases/: TypeAliases.cpp
Ch-1/32_TypeInference/: 01_TypeInference.cpp  CMakeLists.txt
Ch-1/33_EmployeeDB/: CMakeLists.txt  Employee.cpp  Employee.hpp  EmployeeTest.cpp  UserInterface.cpp
Ch-1/ex-1/: CMakeLists.txt  main.cpp
Ch-10/01_ExtendingClasses/: ExtendingClasses.cpp
Ch-10/02_OverridingMethods/: CMakeLists.txt
Ch-10/03_HidingInsteadOfOverriding/: CMakeLists.txt  HidingInsteadOfOverriding.cpp
Ch-10/05_WeatherPrediction/: MyWeatherPrediction.hpp  test.cpp
Ch-10/06_ConstructorChain/: CMakeLists.txt  ConstructorChain.cpp
Ch-10/07_Book/: CMakeLists.txt
Ch-10/08_PolymorphicSpreadsheet/: DoubleSpreadsheetCell.hpp
Ch-10/09_DogBird/: 01_DogBird.cpp  CMakeLists.txt
Ch-10/10_Cherry/: BingCherry.hpp  CherryTree.hpp  TestCherry.cpp
Ch-10/11_InheritedConstructors/: 01.cpp  04.cpp  CMakeLists.txt
Ch-10/12_StaticBaseClassMethod/: CMakeLists.txt
Ch-10/14_MilesEstimator/: MilesEstimator.hpp  TestMilesEstimator.cpp
Ch-10/15_BaseClassMethodWithDefaultArguments/: BaseClassMethodWithDefaultArguments.cpp
Ch-10/16_BaseClassMethodWithDifferentAccess/: 01.cpp  CMakeLists.txt
Ch-10/17_CopyCtorAndAssignmentOp/: CMakeLists.txt
Ch-10/18_RTTI/: 01.cpp
Ch-10/19_VirtualBaseClasses/: CMakeLists.txt
Ch-10/20_Casts/: 04_dynamic_cast.cpp  CMakeLists.txt
Ch-10_inheritance/07_Book/: Book.cpp
Ch-12/16_VariableTemplate/: CMakeLists.txt
Ch-1_crash-course-cpp/08_SpaceshipOperator/: CMakeLists.txt
Ch-7/07_shared_ptr/: 01_shared_ptr_custom_deleter.cpp  04_shared_ptr_aliasing.cpp  CMakeLists.txt
(+260 files in other folders)
